rails/app/assets/stylesheets/kickstart_rails/components/_buttons.sass
=button-default($color, $size: 1)
  display: inline-block
  cursor: pointer
  text-decoration: none
  color: map-get($black, light)
  text-align: left
  transition: box-shadow 0.15s

  &.with-submenu
    position: relative

    ul
      display: none

    &:after
      content: '+'
      font-family: 'Kickstart', Kickstart
      font-size: 0.65rem
      display: inline-block
      color: rgba(0, 0, 0, 0.3)

  &:hover
    box-shadow: 0px -2px 0px 0px rgba(0, 0, 0, 0.1) inset, 0px 2px 0px 0px rgba(255, 255, 255, 0.1) inset
    text-decoration: none

  &:active
    box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.1) inset, 0px -2px 0px 0px rgba(255, 255, 255, 0.1) inset
    text-decoration: none

  // TODO: Done this way, these properties are not mutex
  //       in the case of missing params.

  +button-color($color)
  +button-size($size)

// Separated from main mixin for access by non-semantic library.

=button-color($color)
  background-color: $color

  &.open
    background-color: darken($color, 5%)

  @if lightness($color) > 75%
    color: map-get($black, lighter)
  @else
    color: white

  @if $color == map-get($colors, yellow)
    color: map-get($black, lighter)

  @if $color == transparent
    color: map-get($black, lighter)

=button-size($size)
  +root-element($size: $size)
  margin-bottom: 0
  font-size: 0.9rem * $size
  border-color: hsla(0, 0%, 0%, 0.15)
  padding:
    left: $size * $size * map-get($rootElement, paddingH)
    right: $size * $size * map-get($rootElement, paddingH)

  &.with-submenu
    &:after
      font-size: $size * 0.85rem
      margin:
        left: 1/2 * $size * $size * map-get($rootElement, paddingH)
        right: -1/2 * $size * $size * map-get($rootElement, paddingH)

    &.open
      ul
        display: block

    ul
      +button-dropdown-menu($size)

      li
        padding:
          left: 0
          right: 0
        margin:
          bottom: 0
        font-size: 0.9rem * $size
        color: $default-font-color

        a
          color: inherit

  + .button-dropdown + ul
    // Button with dropdown
    +button-dropdown-menu($size)
    position: static
    margin-top: -$space + 5px

  &.open
    + .button-dropdown + ul
      display: block

      li
        font-size: 0.9rem * $size
        color: $default-font-color

        a
          color: inherit

=button-dropdown-menu($size)
  +list-unstyled
  +root-element($size)
  display: none
  padding:
    left: $size * $size * map-get($rootElement, paddingH)
    right: $size * $size * map-get($rootElement, paddingH)
  position: absolute
  top: 100%
  left: -1px
  margin-top: 5px
  right: -$space
  border-color: map-get($white, darker)
  background: white
  z-index: 10

=button-group-default($color, $size)
  +list-unstyled

  li
    color: inherit
    display: inline-block

    > a, > button, > input
      +button($color, $size)
      color: inherit
      text-decoration: inherit
      vertical-align: top

    &:not(:first-child):not(:last-child)
      > a, > button, > input
        border-radius: 0
        border-left: 0

    &:first-child
      > a, > button, > input
        border-top-right-radius: 0
        border-bottom-right-radius: 0

    &:last-child
      > a, > button, > input
        border-top-left-radius: 0
        border-bottom-left-radius: 0
        border-left: 0

    a.button-dropdown

      &:after
        content: '+'
        display: block
        font-family: "Kickstart", Kickstart
        color: rgba(0, 0, 0, 0.3)
        font-size: 90%

  > li > ul
    display: none

